Add breakpoints on studio.code.org signed out header (#59250)
* add hide-small-desktop class on relevant links

* add show-small-desktop class

* remove uneeded important tag

* make hamburger show for logged out and logged in

* update unit test

* add logic for hide-small-desktop class in hamburger links

* add class param to .hamburger-expandable-item.item

* add .hide-large-desktop class for divider line

* update test_hamburger.rb

--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -230,8 +230,9 @@ img.video_thumbnail {
     }
   }
 
-  @media screen and (max-width: 1120px) {
-    .create_menu {
+  @media (min-width: 1024px) and (max-width: 1268px) {
+    &.hide-small-desktop,
+    .hide-small-desktop {
       display: none !important;
     }
   }
