--- a/pegasus/sites.v3/code.org/styles_min/040-page.css
+++ b/pegasus/sites.v3/code.org/styles_min/040-page.css
@@ -591,10 +591,6 @@ nav.main .help_button {
   padding: 0;
   height: unset;
   margin-inline-end: -6px;
-
-  @media (max-width: 1268px) {
-    display: none;
-  }
 }
 
 nav.main .help_button .help_icon {
@@ -611,10 +607,9 @@ nav.main #hamburger #hamburger-icon {
   margin-inline-start: 6px;
 }
 
-@media (max-width: 1023px) {
-  nav.main .create_menu {
-    display: none !important;
-  }
+nav.main #hamburger #hamburger-contents {
+  top: 51px;
+  right: -3px;
 }
 
 /* Show the hamburger on small desktop
@@ -623,14 +618,6 @@ nav.main #hamburger #hamburger-icon {
   nav.main .left ul li:nth-child(n+4),
   nav.main #hamburger-contents > div:nth-child(-n+4) {
     display: none !important;
-  }
-
-  nav.main #hamburger {
-    display: block;
-  }
-
-  #hamburger .show-mobile {
-    display: block !important;
   }
 }
 
