--- a/shared/css/hamburger.scss
+++ b/shared/css/hamburger.scss
@@ -43,6 +43,11 @@ $arrow-size: 1.5rem;
     display: block;
   }
 
+  &.show-small-desktop,
+  .show-small-desktop {
+    display: none;
+  }
+
   #hamburger-icon {
     cursor: pointer;
     height: 20px;
@@ -56,7 +61,7 @@ $arrow-size: 1.5rem;
     margin: 0;
     width: 290px;
     position: absolute;
-    top: 55px;
+    top: 64px;
     inset-inline-end: 0;
     background-color: $light_primary_500;
     max-height: 100vh;
@@ -149,6 +154,19 @@ $arrow-size: 1.5rem;
       height: 1px;
       background: $light_primary_700;
       margin: 0.75rem 0;
+
+      @media (min-width: 1269px) {
+        &.hide-large-desktop {
+          display: none !important;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1268px) {
+    &.show-small-desktop,
+    .show-small-desktop {
+      display: block;
     }
   }
 
@@ -175,6 +193,7 @@ $arrow-size: 1.5rem;
     padding: 10px 28px 16px 0;
     float: right;
     margin-top: 7px;
+    margin-inline-start: 3px;
     display: inline-block;
 
     %extend_burger {
