--- a/shared/haml/user_header.haml
+++ b/shared/haml/user_header.haml
@@ -32,7 +32,7 @@
 %script{data: {'managed-test-server': "#{CDO.running_web_application? && CDO.test_system?}"}}
 
 - if show_create_menu
-  .header_button.create_menu{id: "header_create_menu", tabindex: 0, role: "button"}
+  .header_button.create_menu{id: "header_create_menu", tabindex: 0, role: "button", class: user_type ? "hide-mobile" : "show-small-desktop"}
     %span.create_button
       = I18n.t("#{loc_prefix}new_project_low_cap")
     &nbsp;
