AI Chat: remove fixed height, allow contents to grow to fill size (#59531)
* AI Chat: remove fixed height, allow contents to grow to fill size

* use css instead of passing classname

--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -10,10 +10,10 @@ $default-spacing: 16px;
   flex-direction: column;
   background-color: $light_white;
   padding: 10px;
+  overflow: hidden;
 }
 
 .conversationArea {
-  height: 65vh;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
