enable cookie-managed DCDO on adhocs, for testing

--- a/config/adhoc.yml.erb
+++ b/config/adhoc.yml.erb
@@ -34,3 +34,5 @@ db_credential_admin: !StackSecret
 db_credential_writer: !StackSecret
 db_credential_reader: !StackSecret
 
+# Enables DCDO settings via cookies
+use_cookie_dcdo: true
