update summary page

--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -159,3 +159,9 @@ label.sectionSelector {
 svg text[fill] {
   fill: $neutral_dark;
 }
+
+.predictMultipleChoiceLetter {
+  font-weight: bold;
+  margin-left: 4px;
+  margin-right: 6px;
+}
