--- a/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
+++ b/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
@@ -56,6 +56,12 @@ $level-cell-width: 52;
   }
 }
 
+.outerTable {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 .tableInterior {
   display: flex;
   flex-direction: row;
