--- a/config/adhoc.yml.erb
+++ b/config/adhoc.yml.erb
@@ -21,7 +21,7 @@ firebase_name: cdo-v3-adhoc
 firebase_secret: !Secret
 firebase_shared_secret: !Secret
 
-# Recaptcha
+# Recaptcha (used on Forgot Password page.  Especially important for this to work on the BugCrowd adhoc)
 recaptcha_site_key: !Secret
 recaptcha_secret_key: !Secret
 
