--- a/aws/cloudformation/iam.yml.erb
+++ b/aws/cloudformation/iam.yml.erb
@@ -326,6 +326,7 @@ roles = {
     ManagedPolicyArns: [
       '!Ref ContributorS3Policy',
       '!Ref ContributorSecretsPolicy',
+      'arn:aws:iam:aws:policy/CloudFrontReadOnlyAccess',
     ]
   },
   TempS3LessEngineerRole: {
