update block xml and callouts.tsv

--- a/apps/src/maze/toolboxes/maze.xml.ejs
+++ b/apps/src/maze/toolboxes/maze.xml.ejs
@@ -6,7 +6,7 @@ var level = locals.level;
 var page = locals.page;
 %>
 <xml id="toolbox" style="display: none;">
-  <block type="maze_moveForward"></block>
+  <block type="maze_moveForward" id="moveForward"></block>
   <block type="maze_turn"><title name="DIR">turnLeft</title></block>
   <block type="maze_turn"><title name="DIR">turnRight</title></block>
   <% if (page === 1) { -%>
