--- a/apps/src/maze/startBlocks.xml.ejs
+++ b/apps/src/maze/startBlocks.xml.ejs
@@ -10,7 +10,7 @@ var page = locals.page;
     <block type="maze_moveForward" x="70" y="70"></block>
   <% } else if (level === 8) { -%>
     <block type="controls_repeat" x="70" y="70" editable="false"
-      deletable="false">
+      deletable="false" id="undeletableRepeat">
       <title name="TIMES">3</title>
     </block>
   <% } else if (level === 13) { -%>
