--- a/config/development.yml.erb
+++ b/config/development.yml.erb
@@ -76,3 +76,6 @@ mapbox_upload_tileset:    'censustiles-dev'
 
 # Enables DCDO settings via cookies
 use_cookie_dcdo: true
+
+# Allows Geolocation to be altered via cookies.
+use_geolocation_override: true
