AI Chat: move clear chat button under message editor

--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -26,3 +26,8 @@ $default-spacing: 16px;
 .waitingForResponse {
   width: 50px;
 }
+
+.buttonRow {
+  display: flex;
+  padding: 0 10px 10px 10px;
+}
