--- a/config.yml.erb
+++ b/config.yml.erb
@@ -330,7 +330,7 @@ netsim_shard_expiry_seconds: 7200
 dcdo_table_name:       dcdo_<%=env%>
 gatekeeper_table_name: gatekeeper_<%=env%>
 
-# Allows DCDO settings via cookies. See: 'dashboard/test/ui/features/cookie_dcdo.rb'
+# Allows DCDO settings via cookies. See: `dashboard/test/ui/features/cookie_dcdo.feature`
 use_cookie_dcdo: false
 
 # Poste (internal transactional email processing framework)
