use icon, revert collapsible section changes

--- a/apps/src/aichat/views/model-customization-workspace.module.scss
+++ b/apps/src/aichat/views/model-customization-workspace.module.scss
@@ -113,3 +113,13 @@
 .tooltip {
   animation: fade-in 0.3s;
 }
+
+.fieldLabelContainer {
+  display: flex;
+  gap: 6px;
+  align-items: baseline;
+
+  .icon {
+    color: $light_gray_500;
+  }
+}
