--- a/apps/src/componentLibrary/tabs/tabs.module.scss
+++ b/apps/src/componentLibrary/tabs/tabs.module.scss
@@ -35,36 +35,77 @@
 .tabs-primary {
   li button {
     align-items: baseline;
-
-    color: $light_gray_700;
-
     background-color: transparent;
     border-radius: 0;
+  }
 
-    &:hover {
-      color: $light_primary_500;
+  &.tabs-light {
+    li button {
+      color: $light_gray_800;
+
+
+      &:hover {
+        color: $light_primary_500;
+        border: none;
+        border-bottom: 2px solid $light_primary_500;
+      }
+
+      &:focus-visible {
+        color: $light_primary_500;
+        outline: 2px solid $light_primary_500;
+      }
+
+      &:active:not(:disabled) {
+        color: $light_black;
+        border: none !important;
+        border-bottom: 2px solid $light_primary_500 !important;
+      }
+
+      &.selectedTab {
+        color: $light_black;
+        border-bottom: 2px solid $light_primary_500;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        color: $light_gray_200;
+        border: none !important;
+      }
     }
+  }
 
-    &:focus-visible {
-      color: $light_primary_500;
-      outline: 2px solid $light_primary_500;
-    }
-
-    &:active:not(:disabled) {
-      color: $light_primary_500;
-      border: none !important;
-      border-bottom: 2px solid $light_primary_500 !important;
-    }
-
-    &.selectedTab {
-      color: $light_black;
-      border-bottom: 2px solid $light_primary_500;
-    }
-
-    &:disabled {
-      cursor: not-allowed;
+  &.tabs-dark {
+    li button {
       color: $light_gray_200;
-      border: none !important;
+
+
+      &:hover {
+        color: $light_white;
+        border: none;
+        border-bottom: 2px solid $light_primary_500;
+      }
+
+      &:focus-visible {
+        color: $light_white;
+        outline: 2px solid $light_primary_500;
+      }
+
+      &:active:not(:disabled) {
+        color: $light_white;
+        border: none !important;
+        border-bottom: 2px solid $light_primary_500 !important;
+      }
+
+      &.selectedTab {
+        color: $light_white;
+        border-bottom: 2px solid $light_primary_500;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        color: $light_gray_800;
+        border: none !important;
+      }
     }
   }
 }
@@ -72,40 +113,96 @@
 .tabs-secondary {
   li button {
     align-items: center;
-    color: $light_white;
-    background-color: $light_gray_700;
     border-radius: 0.25rem 0.25rem 0 0;
+  }
 
-    &:hover {
-      color: $light_white;
-      background-color: $light_primary_500;
+  &.tabs-light {
+    li button {
+      color: $light_gray_800;
+      background-color: $light_gray_50;
+      border: 1px solid $light_gray_200;
+
+      &:hover {
+        color: $light_white;
+        background-color: $light_primary_500;
+        border-color: transparent;
+        border-bottom: 1px solid $light_gray_200;
+      }
+
+      &:focus-visible {
+        color: $light_white;
+        background-color: $light_primary_500;
+        border-color: transparent;
+        border-bottom-color: $light_gray_200;
+        outline: 2px solid $light_primary_500;
+        outline-offset: 2px;
+      }
+
+      &:active:not(:disabled) {
+        color: $light_primary_500;
+        background-color: $light_white;
+        border: 1px solid $light_gray_200 !important;
+      }
+
+      &.selectedTab {
+        color: $light_primary_500;
+        background-color: $light_white;
+        border: 1px solid $light_gray_200;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        color: $light_white;
+        background-color: $light_gray_50;
+        border: 1px solid $light_gray_200;
+      }
+    }
+  }
+
+  &.tabs-dark {
+    li button {
+      color: $light_gray_200;
+      background-color: $light_gray_950;
+      border: 1px solid $light_gray_800;
+
+      &:hover {
+        color: $light_white;
+        background-color: $light_primary_500;
+        border-color: transparent;
+        border-bottom: 1px solid $light_gray_800;
+      }
+
+      &:focus-visible {
+        color: $light_white;
+        background-color: $light_primary_500;
+        border-color: transparent;
+        border-bottom-color: $light_gray_800;
+        outline: 2px solid $light_primary_500;
+        outline-offset: 2px;
+      }
+
+      &:active:not(:disabled) {
+        color: $light_white;
+        background-color: $light_black;
+        border: 1px solid $light_gray_800 !important;
+        border-bottom-color: transparent !important;
+      }
+
+      &.selectedTab {
+        color: $light_white;
+        background-color: $light_black;
+        border: 1px solid $light_gray_800;
+        border-bottom-color: transparent;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        color: $light_gray_800;
+        background-color: $light_gray_950;
+        border: 1px solid $light_gray_800;
+      }
     }
 
-    &:focus-visible {
-      color: $light_white;
-      background-color: $light_primary_500;
-      outline: 2px solid $light_primary_500;
-      outline-offset: 2px;
-    }
-
-    &:active:not(:disabled) {
-      color: $light_primary_500;
-      background-color: $light_white;
-      border: none !important;
-    }
-
-    &.selectedTab {
-      color: $light_primary_500;
-      background-color: $light_white;
-      border: none !important;
-    }
-
-    &:disabled {
-      cursor: not-allowed;
-      color: $light_white;
-      background-color: $light_gray_200;
-      border: none !important;
-    }
   }
 }
 
@@ -149,7 +246,7 @@
         @include label-one;
         margin: 0;
         padding: 0 0.75rem;
-        gap: 0.4375rem;
+        gap: 0.375rem;
         height: 2rem;
 
         &:has(i:first-child) {
@@ -211,7 +308,7 @@
         @include label-two;
         margin: 0;
         padding: 0 0.75rem;
-        gap: 0.4375rem;
+        gap: 0.375rem;
         height: 1.75rem;
 
         &:has(i:first-child) {
@@ -249,7 +346,7 @@
         @include button-three-text;
         margin: 0;
         padding: 0.3125rem 0;
-        gap: 0.5rem;
+        gap: 0.375rem;
 
         &.iconOnlyTab {
           padding: 0.4375rem 1rem;
@@ -311,7 +408,7 @@
         @include button-four-text;
         margin: 0;
         padding: 0.0625rem 0;
-        gap: 0.5rem;
+        gap: 0.375rem;
 
         &.iconOnlyTab {
           padding: 0.25rem 0.5rem;
