--- a/apps/src/templates/sectionProgressV2/floatingHeader/floating-header.module.scss
+++ b/apps/src/templates/sectionProgressV2/floatingHeader/floating-header.module.scss
@@ -1,11 +1,16 @@
+@import 'color.scss';
+
 .floatHeader {
   position: fixed;
   top: 0;
-  background-color: white;
+  overflow: hidden;
+  height: 82px;
 }
 
 .floatHeaderInterior {
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  background-color: white;
+  box-shadow: 0 0 6px 0 $light_black;
 }
