--- a/apps/src/aichat/views/model-customization-workspace.module.scss
+++ b/apps/src/aichat/views/model-customization-workspace.module.scss
@@ -97,35 +97,12 @@
   margin: 10px 0;
 }
 
-.fieldLabel {
-  margin: 0;
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.tooltip {
-  animation: fade-in 0.3s;
-  text-align: left;
-}
-
 .fieldLabelContainer {
   display: flex;
   gap: 6px;
-  align-items: flex-start;
+  align-items: baseline;
+}
 
-  .iconButton {
-    @include remove-button-styles;
-
-    .icon {
-      font-size: 13px;
-      color: $light_gray_500;
-    }
-  }
+.fieldLabel {
+  margin: 0;
 }
