[Google Blockly] Feedback - find empty container blocks (#59693)
* findEmptyContainerBlock

* update maze tests

* remove unused import

* update unit tests

* [Google Blockly] More UI test updates (#59702)

* update maze test

* update farmer test

* update clear puzzle test

* update unit tests

* support feedback for empty function definitions

--- a/apps/src/maze/toolboxes/maze.xml.ejs
+++ b/apps/src/maze/toolboxes/maze.xml.ejs
@@ -28,11 +28,11 @@ var page = locals.page;
       </block>
     <% } -%>
     <% if (level > 8) { -%>
-      <block type="maze_forever"></block>
+      <block type="maze_forever" id="repeatForever"></block>
       <% if (level === 13 || level === 15) { -%>
         <block type="maze_if"><title name="DIR">isPathLeft</title></block>
       <% } else if (level === 14 || level === 16) { -%>
-        <block type="maze_if"><title name="DIR">isPathRight</title></block>
+        <block type="maze_if" id="ifPathRight"><title name="DIR">isPathRight</title></block>
       <% } -%>
       <% if (level > 16) { -%>
        <block type="maze_ifElse"></block>
