--- a/shared/haml/user_header.haml
+++ b/shared/haml/user_header.haml
@@ -92,9 +92,10 @@
     .header_button.header_user#header_user_signin
       %span= I18n.t("#{loc_prefix}signin")
       .signin_callout_wrapper
-  %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
-    .header_button.header_user#header_user_create_account
-      %span= I18n.t("#{loc_prefix}create_account_low_cap")
+  - unless request.path_info.include?('/users/sign_up')
+    %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
+      .header_button.header_user#header_user_create_account
+        %span= I18n.t("#{loc_prefix}create_account_low_cap")
 
 = render inline: File.read(shared_dir('haml/user_header_event_logger.haml')), type: :haml, locals: {is_signed_out: user_type.nil?, create_menu_options: create_drop_down_items&.map{|entry| entry[:title]}&.append("view_all")}
 
