--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -314,7 +314,7 @@ img.video_thumbnail {
   }
 
   #header_user_create_account {
-    background-color: $light_white;
+    background-color: $light_white !important;
     color: $light_primary_500;
     font-weight: $semi-bold-font-weight;
   }
