--- a/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
+++ b/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
@@ -15,19 +15,21 @@
   text-align: center;
 }
 
-.welcomeBannerContainer img {
-  width: 40px;
-  height: 40px;
+.welcomeIconContainer {
+  display: flex;
+  gap: 18px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 64px;
 }
 
-.icon {
-  width: 45px;
-  height: 40px;
-  color: #0093A4;
+.welcomeIconContainer img {
+  width: 60px;
+  height: 60px;
 }
 
-.cdoLogo {
-  margin-top: 64px;
+.exchangeIcon {
+  color: #7F8286;
 }
 
 .titleContainer {
@@ -45,6 +47,12 @@
 
 .cardContentContainer {
   padding-bottom: 16px;
+}
+
+.cardIcon {
+  width: 45px;
+  height: 40px;
+  color: #0093A4;
 }
 
 .button {
