Allow teachers to reset new predict levels (#59596)
* work in progress

* work in progress

* basic functionality

* add help tip and error message

* improve styling

* update comments

* add unit tests

* address comments

* use new method

* fix linter issue

--- a/apps/src/lab2/views/components/predict.module.scss
+++ b/apps/src/lab2/views/components/predict.module.scss
@@ -28,6 +28,11 @@
   border-radius: 5px;
 }
 
+.resetError {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
 .predictSummaryContainer {
   margin-bottom: 15px;
 }
