add table with sample supported columns

--- a/apps/src/lib/levelbuilder/ai-tutor/ai-tutor-tester.module.scss
+++ b/apps/src/lib/levelbuilder/ai-tutor/ai-tutor-tester.module.scss
@@ -7,3 +7,13 @@
 .denied {
   color: red;
 }
+
+// SampleColumns table styles.
+.row {
+  border: 1px solid;
+}
+
+.cell {
+  padding: 8px;
+  border-right: 1px solid;
+}
