--- a/shared/haml/user_header.haml
+++ b/shared/haml/user_header.haml
@@ -30,6 +30,7 @@
 %script{data: {"amplitude-api-key": CDO.safe_amplitude_api_key}}
 %script{data: {'statsig-api-client-key': CDO.safe_statsig_api_client_key}}
 %script{data: {'managed-test-server': "#{CDO.running_web_application? && CDO.test_system?}"}}
+= render inline: File.read(shared_dir('haml/user_header_statsig_reporter.haml')), type: :haml
 
 - if show_create_menu
   .header_button.create_menu{id: "header_create_menu", tabindex: 0, role: "button", class: user_type ? "hide-mobile" : "show-small-desktop"}
@@ -92,10 +93,9 @@
     .header_button.header_user#header_user_signin
       %span= I18n.t("#{loc_prefix}signin")
       .signin_callout_wrapper
-  - unless request.path_info.include?('/users/sign_up')
-    %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
-      .header_button.header_user#header_user_create_account
-        %span= I18n.t("#{loc_prefix}create_account_low_cap")
+  %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
+    .header_button.header_user#header_user_create_account
+      %span= I18n.t("#{loc_prefix}create_account_low_cap")
 
 = render inline: File.read(shared_dir('haml/user_header_event_logger.haml')), type: :haml, locals: {is_signed_out: user_type.nil?, create_menu_options: create_drop_down_items&.map{|entry| entry[:title]}&.append("view_all")}
 
