--- a/shared/haml/user_header.haml
+++ b/shared/haml/user_header.haml
@@ -93,6 +93,7 @@
     .header_button.header_user#header_user_signin
       %span= I18n.t("#{loc_prefix}signin")
       .signin_callout_wrapper
+  -# Create Acount button for the A/B test
   %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
     .header_button.header_user#header_user_create_account
       %span= I18n.t("#{loc_prefix}create_account_low_cap")
