--- a/apps/src/lab2/views/components/predict-summary.module.scss
+++ b/apps/src/lab2/views/components/predict-summary.module.scss
@@ -7,11 +7,29 @@
   gap: 10px;
 }
 
+.responses {
+  display: flex;
+}
+
 .responseIcon {
   padding-right: 4px;
+
   :global(.fa) {
     vertical-align: middle;
-    font-size: 20px;
+    font-size: 28px; // size of the button
     color: $brand_primary_default;
   }
+}
+
+.responseCount {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  display: block;
+}
+
+.responseLabel {
+  display: block;
+  font-size: 14px;
+  line-height: 14px;
 }
