--- a/shared/haml/help_button.haml
+++ b/shared/haml/help_button.haml
@@ -10,7 +10,7 @@
     - help_items.each do |entry|
       %a.linktag{id: entry[:id], href: entry[:url], target: entry[:target], rel: entry[:rel]}=entry[:title]
 
-  %i.help_icon.clicktag{class: "fa fa-question-circle hide-mobile", id: "help-icon"}
+  -# %i.help_icon.clicktag{class: "fa fa-question-circle hide-mobile", id: "help-icon"}
     %span{style: "pointer-events: none"}
 
 
