Adds MinIO support and mocks Cloudfront signing so Dance Party works.
The populators will produce files for the cdo-sound-library and
cdo-restricted buckets for safe development environment testing of the
Dance Party project type.

--- a/config.yml.erb
+++ b/config.yml.erb
@@ -285,6 +285,7 @@ aws_region: us-east-1
 # an AWS service. For instance, an emulated LocalStack solution.
 # When the endpoint is set, you can also set the access key, etc.
 aws_endpoint:
+aws_s3_endpoint:
 aws_access_key_id:
 aws_secret_access_key:
 
