--- a/shared/haml/hamburger.haml
+++ b/shared/haml/hamburger.haml
@@ -4,6 +4,14 @@
 
 #hamburger{class: contents[:visibility], tabindex: "0", 'aria-label': I18n.t('header_screen_reader_hamburger')}
   #hamburger-contents.hide-responsive-menu
+    #hamburger-sign-up-buttons{style: "display: none"}
+      .button-wrapper
+        %a.linktag{href: CDO.studio_url('users/sign_in'), class: 'button-signin', id: 'signin_button'}
+          = I18n.t("#{loc_prefix}signin")
+        -# Create Acount button for the A/B test
+        %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
+          = I18n.t("#{loc_prefix}create_account_low_cap")
+      .divider
     - contents[:entries].each do |entry|
       - if entry[:type] == "divider"
         .divider{id: entry[:id], class: entry[:class]}
