--- a/shared/haml/user_header.haml
+++ b/shared/haml/user_header.haml
@@ -89,12 +89,12 @@
       %a.linktag#user-edit{href: CDO.studio_url('users/edit')}= I18n.t("#{loc_prefix}settings")
       %a.linktag#user-signout{href: CDO.studio_url('users/sign_out')}= I18n.t("#{loc_prefix}logout")
 - else
-  %a.linktag{href: CDO.studio_url('users/sign_in'), class: 'button-signin', id: 'signin_button'}
+  %a.linktag{href: CDO.studio_url('users/sign_in'), class: 'button-signin desktop', id: 'signin_button'}
     .header_button.header_user#header_user_signin
       %span= I18n.t("#{loc_prefix}signin")
       .signin_callout_wrapper
   -# Create Acount button for the A/B test
-  %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account', id: 'create_account_button'}
+  %a.linktag{href: CDO.studio_url('users/sign_up'), class: 'button-create-account desktop', id: 'create_account_button'}
     .header_button.header_user#header_user_create_account
       %span= I18n.t("#{loc_prefix}create_account_low_cap")
 
