--- a/apps/src/codebridge/InfoPanel/styles/info-panel.module.scss
+++ b/apps/src/codebridge/InfoPanel/styles/info-panel.module.scss
@@ -6,7 +6,7 @@
   grid-area: info-panel;
   color: $white;
   background-color: $neutral_dark;
-  border: 1px solid $neutral_dark80;
+  //border: 1px solid $neutral_dark80;
 }
 
 // This is adapted from customDropdown.module.scss in the component library.
