--- a/apps/src/codebridge/styles/cdoIDE.scss
+++ b/apps/src/codebridge/styles/cdoIDE.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   scrollbar-color: $neutral_dark70 $darkest_gray;
-  gap: 1px;
+  gap: 0; // 1px;
 }
 
 .cdo-ide-outer {
