--- a/apps/src/lab2/views/components/instructions.module.scss
+++ b/apps/src/lab2/views/components/instructions.module.scss
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
   background-size: 100% 200%;
-  padding: 10px;
+  padding: 6px;
   box-sizing: border-box;
   position: relative;
   font-size: 14px;
@@ -223,4 +223,13 @@
 
 .feedback {
   margin-top: auto;
+}
+
+.lessonHeading {
+  overflow-y: auto;
+  white-space: pre-wrap;
+  padding: 10px 20px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  background-color: #3f444b;
 }
