--- a/pegasus/sites.v3/code.org/public/ai/index.haml
+++ b/pegasus/sites.v3/code.org/public/ai/index.haml
@@ -162,7 +162,7 @@ theme: responsive_full_width
         =hoc_s('teach_ai_banner_july_2024.headline')
       %p.body-three
         =hoc_s('teach_ai_banner_july_2024.description')
-      %a.link-button.has-external-link{href: "https://teachai.org/policy", target: "_blank", rel: "noopener noreferrer"}
+      %a.link-button.has-external-link{href: "https://teachai.org/cs", target: "_blank", rel: "noopener noreferrer"}
         =hoc_s('teach_ai_banner_july_2024.button_text')
   .clear
 
