--- a/pegasus/sites.v3/code.org/public/ai/index.haml
+++ b/pegasus/sites.v3/code.org/public/ai/index.haml
@@ -154,16 +154,16 @@ theme: responsive_full_width
 %section.bg-neutral-light
   .wrapper.flex-container.justify-space-between.align-items-center.wrap
     %figure.col-45{style: "margin-bottom: 1rem"}
-      %img{src: "/images/ai/pl/101/TeachAI.png", alt: "", style: "width: 100%"}
+      %img{src: "/images/ai/pl/101/teach-ai-future-of-cs.png", alt: "", style: "width: 100%"}
     .text-wrapper.col-50{style: "margin-bottom: 1rem"}
       %p.new
-        =hoc_s(:new)
+        =hoc_s('teach_ai_banner_july_2024.subtitle')
       %h2.heading-lg
-        =hoc_s(:ai_promote_literacy)
+        =hoc_s('teach_ai_banner_july_2024.headline')
       %p.body-three
-        =hoc_s(:ai_section_body)
-      %a.link-button.has-external-link{href: "https://teachai.org/policy", target: "_blank", rel: "noopener noreferrer"}
-        =hoc_s(:ai_explore_the_resources)
+        =hoc_s('teach_ai_banner_july_2024.description')
+      %a.link-button.has-external-link{href: "https://teachai.org/cs", target: "_blank", rel: "noopener noreferrer"}
+        =hoc_s('teach_ai_banner_july_2024.button_text')
   .clear
 
 %section.no-padding-bottom
