--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -138,7 +138,7 @@ label.sectionSelector {
       background-color: $light_white;
       border: 1px solid rgba(0 0 0 / .15);
       border-radius: 4px;
-      -webkit-box-shadow: 0 6px 12px rgba(20 16 16 0.175);
+      -webkit-box-shadow: 0 6px 12px rgba(20 16 16 / 0.175);
       box-shadow: 0 6px 12px rgba(0 0 0 / .175);
       background-clip: padding-box;
       padding: .25rem 0 .25rem;
@@ -152,7 +152,7 @@ label.sectionSelector {
       /* Reset's every elements apperance */
       background: none repeat scroll 0 0 transparent;
       border: none !important;
-      border-radius: 0;
+      border-radius: 2px;
       border-spacing: 0;
       margin: 0;
       text-decoration: none;
