--- a/apps/src/componentLibrary/tabs/tabs.module.scss
+++ b/apps/src/componentLibrary/tabs/tabs.module.scss
@@ -150,6 +150,8 @@
         color: $light_white;
         background-color: $light_primary_500;
         border-color: transparent;
+        border-left: none;
+        border-right: none;
         border-bottom: 1px solid $light_gray_200;
       }
 
@@ -157,6 +159,8 @@
         color: $light_white;
         background-color: $light_primary_500;
         border-color: transparent;
+        border-left: none;
+        border-right: none;
         border-bottom-color: $light_gray_200;
         outline: 2px solid $light_primary_500;
         outline-offset: 2px;
@@ -199,6 +203,8 @@
         color: $light_white;
         background-color: $light_primary_500;
         border-color: transparent;
+        border-left: none;
+        border-right: none;
         border-bottom: 1px solid $light_gray_800;
       }
 
@@ -206,6 +212,8 @@
         color: $light_white;
         background-color: $light_primary_500;
         border-color: transparent;
+        border-left: none;
+        border-right: none;
         border-bottom-color: $light_gray_800;
         outline: 2px solid $light_primary_500;
         outline-offset: 2px;
@@ -339,16 +347,40 @@
         gap: 0.375rem;
         height: 1.75rem;
 
+        &:hover, &:focus-visible {
+          &:not(.selectedTab) {
+            padding: 0 calc(0.75rem + 1px);
+          }
+        }
+
         &:has(i:first-child) {
           padding-inline-start: 0.625rem;
+
+          &:hover, &:focus-visible {
+            &:not(.selectedTab) {
+              padding-inline-start: calc(0.625rem + 1px);
+            }
+          }
         }
 
         &:has(i:last-child) {
           padding-inline-end: 0.625rem;
+
+          &:hover, &:focus-visible {
+            &:not(.selectedTab) {
+              padding-inline-end: calc(0.625rem + 1px);
+            }
+          }
         }
 
         &.iconOnlyTab {
           padding: 0 0.625rem;
+
+          &:hover, &:focus-visible {
+            &:not(.selectedTab) {
+              padding: 0 calc(0.625rem + 1px);
+            }
+          }
         }
 
         span {
