swap out image on self_paced_pl_modules_carousel_elementary.haml

--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
@@ -32,7 +32,7 @@
       {
         overline: hoc_s(:module_grade_3_5_teachers),
         title: hoc_s(:module_label_teaching_elementary_game_design),
-        image: '/images/self-paced-pl-tile-elementary-game-design.jpg',
+        image: '/images/action-blocks/action-block-game-design.png',
         curriculum: hoc_s(:curriculum_name_elementary_game_design),
         duration: hoc_s(:module_duration_1_hr_30_minutes),
         prerequisites: hoc_s(:module_prerequisites_none),
