Create new UI version of simple sign in page (#59602)
* update styling

* only show new strings when not lms

* update styling

* styling PR comments

* remove styling used for testing

* update string names

* show lms icon

* restructure styling to line up with previous structure

* move styles into card content

* remove nonstyling changes

* add icon check

* fix background styling

--- a/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
+++ b/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
@@ -1,12 +1,22 @@
-.icon {
+@import 'color', 'style-constants';
+
+body {
+  background-color: $light_gray_50;
+}
+
+.cardIcon {
   width: 45px;
-  height: 36px;
+  height: 40px;
   color: #0093A4;
 }
 
 .cardContainer {
   display: flex;
   gap: 24px;
+}
+
+.cardContent {
+  padding-bottom: 16px;
 }
 
 .button {
@@ -24,28 +34,40 @@
   border: 1px solid #292F36
 }
 
-.mainContainer {
+.contentContainer {
+  max-width: $content-width;
+  margin: auto;
   font-size: 16px;
+  padding-bottom: 32px;
 }
 
 .welcomeContainer {
   text-align: center;
 }
 
-.welcomeBannerContainer {
+.welcomeIconContainer {
   display: flex;
   gap: 18px;
   justify-content: center;
   align-items: center;
+  padding-top: 64px;
 }
 
-.welcomeBannerContainer img {
-  width: 40px;
-  height: 40px;
+.welcomeIconContainer img {
+  width: 60px;
+  height: 60px;
 }
 
 .exchangeIcon {
   color: #7F8286;
+}
+
+.titleContainer {
+  margin-top: 24px;
+}
+
+.titleDesc {
+  margin: 10px 0 64px 0;
 }
 
 .newAccountForm {
