P20-876: Fix generation of `fontConstants.js`

--- a/shared/css/fonts/noto-sans.scss
+++ b/shared/css/fonts/noto-sans.scss
@@ -50,7 +50,7 @@
 // Kannada (ಕನ್ನಡ): kn-IN
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Kannada:wdth,wght@62.5..100,100..900&display=swap');
 
-// Khmer (ភាសាខ្មែរ): km-KH"
+// Khmer (ភាសាខ្មែរ): km-KH
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wdth,wght@62.5..100,100..900&display=swap');
 
 // Korean (한국어): ko-KR
