--- a/shared/css/font.scss
+++ b/shared/css/font.scss
@@ -12,7 +12,7 @@ $noto-sans-fonts: 'Noto Sans', 'Noto Sans Arabic', 'Noto Sans Armenian', 'Noto S
                   'Noto Sans Kannada', 'Noto Sans Khmer', 'Noto Sans KR', 'Noto Sans Myanmar', 'Noto Sans Sinhala',
                   'Noto Sans Tamil', 'Noto Sans Telugu', 'Noto Sans Thai', 'Noto Sans Thaana';
 
-$main-font: ($metropolis-font, $noto-sans-fonts, sans-serif);
+$main-font: $metropolis-font, $noto-sans-fonts, sans-serif;
 
 $thin-font-weight: 100;
 $extra-light-font-weight: 200;
