Basic hide functionality

--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -167,7 +167,7 @@ label.sectionSelector {
       cursor: pointer;
 
       &:hover {
-        background-color: $light_secondary_100;
+        background-color: $light_gray_100;
       }
 
       &:focus-visible {
