--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -92,6 +92,12 @@ label.sectionSelector {
     display: block;
   }
 
+  .studentResponsesContent {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
   .studentResponsesColumns {
     width: 100%;
     columns: 2 auto;
@@ -189,6 +195,10 @@ label.sectionSelector {
         align-self: stretch;
       }
     }
+  }
+
+  .hiddenResponsesAlert {
+    background-color: $light_gray_50;
   }
 
   %students-submitted {
