--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -105,7 +105,7 @@ label.sectionSelector {
     padding-top: 24px;
     padding-bottom: 12px;
   }
-  
+
   .pinnedResponsesColumns {
     width: 100%;
     columns: 2 auto;
@@ -114,11 +114,20 @@ label.sectionSelector {
     padding-bottom: 12px;
   }
 
+  .pinnedResponse {
+    background-color: $light_secondary_500;
+    p {
+      color: $light_white;
+    }
+  }
+
+  .unpinnedResponse {
+    background-color: #F6EDFD;
+  }
+
   .studentAnswer {
     padding: 12px;
     margin-bottom: 16px;
-    // TODO: Update to use #E6F6F8 once the phase-2 brand colors are in.
-    background-color: $lightest_cyan;
     width: 100%;
     box-sizing: border-box;
     border-radius: 4px;
@@ -138,6 +147,14 @@ label.sectionSelector {
     .studentAnswerMenuButton {
       width: 26px;
       height: 26px;
+    }
+
+    .studentAnswerMenuButtonPinned {
+      color: $light_white;
+
+      &:hover {
+        background-color: $light_secondary_700;
+      }
     }
 
     .studentAnswerMenuDropdownContainer {
