--- a/dashboard/app/views/lti/v1/account_linking/landing.haml
+++ b/dashboard/app/views/lti/v1/account_linking/landing.haml
@@ -22,6 +22,6 @@
     script_data[:new_cta_type] = new_cta_type
     script_data[:user_type] = landing_session[:user_type] || current_user&.user_type
 
-  %script{src: webpack_asset_path('js/lti/v1/account_linking/landing.js'), data: {json: script_data.to_json}}}
+  %script{src: webpack_asset_path('js/lti/v1/account_linking/landing.js'), data: {json: script_data.to_json}}
 %body
   %div{id: 'mount-point'}
