--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -102,22 +102,47 @@ label.sectionSelector {
     width: 100%;
     columns: 2 auto;
     column-gap: 48px;
-    padding-top: 24px;
+    padding-top: 40px;
     padding-bottom: 12px;
+  }
+
+  .pinResponsesSection {
+    display: flex;
+    flex-direction: column;
   }
 
   .pinnedResponsesColumns {
     width: 100%;
     columns: 2 auto;
     column-gap: 48px;
-    padding-top: 24px;
-    padding-bottom: 12px;
+    padding-bottom: 4px;
+    border-bottom: 1px solid $light_gray_200;
   }
 
   .pinnedResponse {
     background-color: $light_secondary_500;
     p {
       color: $light_white;
+    }
+  }
+
+  .pinResponsesHeader {
+    display: flex;
+    flex-direction: row;
+    height: 42px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    align-items: center;
+
+    h3 {
+      margin: 0;
+      margin-inline-end: auto;
+    }
+
+    .pinHeaderIcon {
+      color: $light_secondary_500;
+      margin-inline-end: 8px;
+      font-size: 20px;
     }
   }
 
