--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -90,7 +90,7 @@ label.sectionSelector {
 .headerContainer {
   display: flex;
   flex-direction: row;
-  align-items: center; /* Align items vertically centered */
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -106,10 +106,12 @@ label.sectionSelector {
     padding-top: 24px;
     padding-bottom: 12px;
 
+    .studentResponseBlock {
+      margin-bottom: 16px;
+    }
+
     .studentName {
       min-height: 24px;
-      margin-bottom: 16px;
-      padding-top: 4px;
 
       p {
         margin: 0;
@@ -130,6 +132,7 @@ label.sectionSelector {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 4px;
 
     p {
       margin: 0;
@@ -155,12 +158,12 @@ label.sectionSelector {
       margin: 0.25rem 0;
       list-style: none;
       background-color: $light_white;
-      border: 1px solid rgba(0 0 0 / .15);
+      border: 1px solid rgba(0 0 0 / 0.15);
       border-radius: 4px;
       -webkit-box-shadow: 0 6px 12px rgba(20 16 16 / 0.175);
-      box-shadow: 0 6px 12px rgba(0 0 0 / .175);
+      box-shadow: 0 6px 12px rgba(0 0 0 / 0.175);
       background-clip: padding-box;
-      padding: .25rem 0 .25rem;
+      padding: 0.25rem 0 0.25rem;
 
       ul {
         margin: 0;
