Create Account Button A/B Test - Add the button and test (#59144)
* add create account button

* add statsig and amplitude event

* update comment

* add logic to hide button if on sign up page

* update button bg style

* set up ab test files webpack entry point

* add comment above create button

* set up logic to show and hide buttons in the hamburger

* update style logic

* hide districts link on pegasus

* update logic to hide buttons if signed in

* clean up comments

* commit StatsigReporter.js file, but remove before merge

* remove the !! from StatsigReporter.js

* hide create account button on initial load

* pr feedback

--- a/pegasus/sites.v3/code.org/styles_min/040-page.css
+++ b/pegasus/sites.v3/code.org/styles_min/040-page.css
@@ -551,7 +551,8 @@ nav.main i.fa-fw {
 
 nav.main .create_menu,
 nav.main .user_menu,
-nav.main .button-signin {
+nav.main .button-signin,
+nav.main .button-create-account {
   border: 2px solid var(--neutral_white);
   border-radius: 4px;
   color: var(--neutral_white);
@@ -560,6 +561,12 @@ nav.main .button-signin {
   text-decoration: none;
   padding: 7px 12px;
   margin: 0;
+}
+
+nav.main .button-create-account {
+  background-color: var(--neutral_white);
+  color: var(--brand_primary_default);
+  font-weight: var(--semi-bold-font-weight);
 }
 
 nav.main .create_menu,
@@ -616,7 +623,7 @@ nav.main #hamburger #hamburger-contents {
   with appropriate links hidden */
 @media (min-width: 1024px) and (max-width: 1268px) {
   nav.main .left ul li:nth-child(n+4),
-  nav.main #hamburger-contents > div:nth-child(-n+4) {
+  nav.main #hamburger-contents > div:nth-child(-n+5) {
     display: none !important;
   }
 }
