--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -313,10 +313,15 @@ img.video_thumbnail {
     }
   }
 
+  #header_user_create_account {
+    background-color: $light_white !important;
+    color: $light_primary_500;
+    font-weight: $semi-bold-font-weight;
+  }
+
   .button-signin {
     text-decoration: none;
   }
-
   .project_updated_at {
     font-size: 10px;
     .project-save-error {
@@ -1259,6 +1264,7 @@ $default-modal-width: 640px;
 
 #sign_in_or_user {
   float: left;
+  display: flex;
 }
 
 input.header_input {
