Add hiding and showing CFU student responses (#59819)
* Add do-nothing button for hide pin menu

* Add dropdown, still needs lots of styling

* Styles

* add dcdo

* Rem

* i18n and tests

* Fix test

* Style based on Molly's suggestions

* Basic hide functionality

* More style

* Test

* Fix alert

* Fix test

* Fix

* Fix

* Add role button

* Changelog

--- a/apps/src/templates/levelSummary/summary.module.scss
+++ b/apps/src/templates/levelSummary/summary.module.scss
@@ -92,6 +92,12 @@ label.sectionSelector {
     display: block;
   }
 
+  .studentResponsesContent {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
   .studentResponsesColumns {
     width: 100%;
     columns: 2 auto;
