Add border to tab content

--- a/pegasus/sites.v3/code.org/public/css/page/donate-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/donate-styles.scss
@@ -31,6 +31,10 @@ section.donate-options {
 
   .tabs-section {
     min-height: 518px;
+    
+    button.tab {
+      flex: 1;
+    }
 
     @media screen and (max-width: $width-md) {
       margin-bottom: 2rem;
