--- a/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
+++ b/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
@@ -1122,7 +1122,6 @@ section.quote {
 
   nav {
     border-bottom: 6px solid var(--brand_primary_default);
-    margin: 0 0 3rem;
     align-items: end;
     gap: 0.25rem;
 
@@ -1138,7 +1137,6 @@ section.quote {
       cursor: pointer;
       white-space: normal;
       height: -webkit-fit-content;
-      flex: 1;
 
       &:hover {
         background-color: var(--neutral_dark10);
@@ -1165,6 +1163,16 @@ section.quote {
         display: none;
       }
     }
+  }
+
+  .tab-content-container {
+    padding: 30px;
+    border-radius: 0px 0px 8px 8px;
+    border-right: 1px solid var(--Light-Gray-200, #D1D4D8);
+    border-bottom: 1px solid var(--Light-Gray-200, #D1D4D8);
+    border-left: 1px solid var(--Light-Gray-200, #D1D4D8);
+    background: var(--Light-White, #FFF);
+    box-sizing: border-box;
   }
 
   // Hides tab content
