Adjust donate styles

--- a/pegasus/sites.v3/code.org/public/css/page/donate-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/donate-styles.scss
@@ -30,7 +30,8 @@ section.donate-options {
   }
 
   .tabs-section {
-    min-height: 518px;
+    min-height: 307px;
+    margin-bottom: 3rem;
     
     button.tab {
       flex: 1;
